unpackaged/main/default/objects/Contact/fields/MarketingOptOut__c.field-meta.xml
<CustomField>
    <fullName>MarketingOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if opted out of marketing</description>
    <label>Marketing Opt Out</label>
    <type>Checkbox</type>
</CustomField>