unpackaged/main/default/objects/Contact/fields/Outage_Communications__c.field-meta.xml
<CustomField>
    <fullName>Outage_Communications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outage Communications</label>
    <type>Checkbox</type>
</CustomField>