unpackaged/main/default/objects/Contact/validationRules/NATTERBOX_ASSTNUM.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_ASSTNUM</fullName>
    <active>true</active>
    <description>Check assistant phone number is valid for Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK( AssistantPhone ), REGEX( AssistantPhone ,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>AssistantPhone</errorDisplayField>
    <errorMessage>INVALID PHONE NUMBER</errorMessage>
</ValidationRule>