unpackaged/main/default/objects/Contact/validationRules/NATTERBOX_HOMENUM.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_HOMENUM</fullName>
    <active>true</active>
    <description>Check home phone number is valid for Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK(  HomePhone  ), REGEX(  HomePhone  ,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>HomePhone</errorDisplayField>
    <errorMessage>INVALID PHONE NUMBER</errorMessage>
</ValidationRule>