unpackaged/main/default/objects/Contact/validationRules/NATTERBOX_MOBILENUM.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_MOBILENUM</fullName>
    <active>true</active>
    <description>Check mobile phone number is valid for Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK(   MobilePhone   ), REGEX(   MobilePhone  ,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>INVALID PHONE NUMBER</errorMessage>
</ValidationRule>