unpackaged/main/default/objects/Contact/validationRules/NATTERBOX_OTHERNUM.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_OTHERNUM</fullName>
    <active>true</active>
    <description>Check other phone number is valid for Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK(OtherPhone), REGEX(OtherPhone,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>OtherPhone</errorDisplayField>
    <errorMessage>INVALID PHONE NUMBER</errorMessage>
</ValidationRule>