unpackaged/main/default/objects/Contact/validationRules/NATTERBOX_PHONENUM.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_PHONENUM</fullName>
    <active>true</active>
    <description>Check other phone number is valid for Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK( Phone ), REGEX( Phone ,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>INVALID PHONE NUMBER</errorMessage>
</ValidationRule>